<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/filterWiFiBand"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:visibility="gone"

    tools:visibility="visible">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/filter_wifi_band_title"
        android:textColor="@android:color/black"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_half_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/filterWifiBand2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="true"
            android:focusable="true"
            android:onClick="onClickFilter"
            android:gravity="center"
            android:text="@string/wifi_band_2ghz"
            android:textColor="@color/regular"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/filterWifiBand5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="true"
            android:focusable="true"
            android:onClick="onClickFilter"
            android:gravity="center"
            android:text="@string/wifi_band_5ghz"
            android:textColor="@color/regular"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/filterWifiBand6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="true"
            android:focusable="true"
            android:onClick="onClickFilter"
            android:gravity="center"
            android:text="@string/wifi_band_6ghz"
            android:textColor="@color/regular"
            android:textStyle="bold" />

    </LinearLayout>

    <include layout="@layout/separator_line"/>
</LinearLayout>
