<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back2"
    tools:context=".SettingsActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="350dp"
        android:layout_height="600dp"
        app:cardBackgroundColor="@android:color/white"
        app:cardCornerRadius="20dp"
        app:cardElevation="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/saveStateBtn"
            android:layout_width="250dp"
            android:layout_height="48dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="450dp"
            android:backgroundTint="@color/Green"
            android:text="@string/save" />

        <TextView
            android:id="@+id/languageTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="310dp"
            android:text="@string/language"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/rate_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="180dp"
            app:srcCompat="@drawable/ic_plus" />

        <Button
            android:id="@+id/logoutBtn"
            android:layout_width="250dp"
            android:layout_height="48dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="520dp"
            android:backgroundTint="@color/black"
            android:text="@string/logout" />

        <ImageView
            android:id="@+id/sound_remove"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="50dp"
            android:layout_marginRight="50dp"
            app:srcCompat="@drawable/ic_minus" />


        <com.google.android.material.slider.Slider
            android:id="@+id/soundSlider"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="64dp"
            android:valueFrom="100"
            android:valueTo="2000"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/soundeFrequencyTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:text="@string/sound_frequency"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/sound_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="50dp"
            android:text="0"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/sound_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="50dp"
            app:srcCompat="@drawable/ic_plus" />

        <TextView
            android:id="@+id/updateRateTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="150dp"
            android:text="@string/update_rate"
            android:textColor="@color/black"
            android:textStyle="bold" />


        <com.google.android.material.slider.Slider
            android:id="@+id/rateSlider"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="200dp"
            android:valueFrom="600"
            android:valueTo="3000"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/rate_remove"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="180dp"
            android:layout_marginRight="50dp"
            app:srcCompat="@drawable/ic_minus" />

        <TextView
            android:id="@+id/rate_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="180dp"
            android:text="0"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/rus_lang_btn"
            android:layout_width="40dp"
            android:layout_height="32dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="340dp"
            android:layout_marginRight="40dp"
            app:srcCompat="@drawable/icon_rus" />

        <ImageView
            android:id="@+id/uk_lang_btn"
            android:layout_width="40dp"
            android:layout_height="32dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="340dp"
            app:srcCompat="@drawable/icon_uk" />

        <View
            android:id="@+id/view4"
            android:layout_width="150dp"
            android:layout_height="90dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="300dp"
            android:background="@drawable/rectangleshape" />

        <ImageView
            android:id="@+id/backBtn"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            app:srcCompat="@drawable/ic_back"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/sound_recommended_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="110dp"
            android:text="@string/recommended_value_1000ms"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/rate_recommended_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="240dp"
            android:text="@string/recommended_value_1000ms"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:textStyle="bold" />

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>